# backup

./: .isort.cfg  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
backup/: __init__.py  __main__.py  backup.py  cli.py  config.example.py  excludes.py  icinga.py  logconfig.py  logging.py  netbox.py  rotation.py  schedules.py  zfs.py
