[tool.poetry]
name = "backup"
version = "0.1.0"
description = "SOWN backup"
readme = "README.md"
authors = ["Dan Trickey <git@trickey.io>", "Tim Stallard <sown@timstallard.me.uk"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
click = "^8.1.7"
paramiko = "^3.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.2"
mypy = "^1.10.1"
types-requests = "^2.32.0.20240712"
types-paramiko = "^3.4.0.20240423"

[tool.poetry.scripts]
backup = "backup.cli:cli"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "B",
    "BLE",
    "C4",
    "COM",
    "DJ",
    "DTZ",
    "E",
    "F",
    "FA",
    "FBT",
    "I",
    "N",
    "S",
    "T10",
    "UP",
    "W",
]
ignore = [
    "ANN101",  # Missing type annotation for `self` in method
    "ANN102",  # Missing type annotation for `cls` in classmethod
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "B009",    # Do not call `getattr` with a constant attribute value.
    "COM812",  # Conflicts with formatter
    "N999",    # Invalid module name
    "S101",    # S101 Use of `assert` detected
    "S603",    # `subprocess` call: check for execution of untrusted input
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
